[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["Nadeemmazahreh <nadeemmazahreh97@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
ipykernel = "^6.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
